# opendro

./: CMakeLists.txt  LICENSE
cmake/: ConfigureSDL.cmake  OpenDROPlatform.cmake
firmware/pico/: CMakeLists.txt
firmware/pico/src/: encoder.pio  main.c
shared/: CMakeLists.txt
shared/segdisplay/: CMakeLists.txt
shared/segdisplay/include/segdisplay/: segdisplay.h
shared/segdisplay/src/: segdisplay.c
software/rpi/: CMakeLists.txt
software/rpi/src/: calculator.c  calculator.h  config.c  config.h  dro.c  dro.h  keypad.c  keypad.h  main.c  memory_store.c  memory_store.h  ui.c  ui.h
